# alchemist

./: .gitignore  MYREADME.md  README.md  env.sample  pyproject.toml  see_babo.ipynb  temp_models.py
.github/ISSUE_TEMPLATE/: 이슈-카드-템플릿.md
applicant/: models.py  serializers.py
applicant/migrations/: 0001_initial.py  0002_alter_applicant_table.py  0003_remove_applicant_partner.py  0004_remove_applicant_applicant_applicant_applicant_info_and_more.py  0005_alter_applicant_applicant_info_alter_applicant_user.py
applicant_info/: admin.py  apps.py  models.py  serializers.py
applicant_info/migrations/: 0001_initial.py  0002_alter_applicantinfo_table.py  0003_alter_applicantinfo_status.py  0004_alter_applicantinfo_competition.py  0005_alter_applicantinfo_competition.py  0006_alter_applicantinfo_is_waiting.py  (+1 more)
club/: admin.py  models.py  serializers.py  urls.py  views.py
club_applicant/: admin.py  apps.py  models.py
coach/: admin.py  models.py  serializers.py
competition/: admin.py  models.py  serializers.py  urls.py  views.py
config/: loggers.py  middleware.py  settings.py  urls.py
core/: choices.py  log_middleware.py  models.py  settings.py
image_url/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
match_type/: apps.py  models.py
matchtype/: admin.py  apps.py  models.py  serializers.py
participant/: models.py
participant_info/: apps.py  models.py
team/: admin.py  models.py  serializers.py  urls.py  views.py
tier/: admin.py  models.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+75 files in other folders)
